[package]
name = "task-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
strum = { version = "0.27", features = ["derive"] }
clap = { version = "4.5.41", default-features = true, features = ["derive"] }
crossterm = "0.29.0"
directories = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.17.0", features = ["serde", "v4", "fast-rng", "macro-diagnostics"] }
